<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/firstColor"
    tools:context=".pro.presentation.activityEntry.logIn.LogInFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/hello"
            android:textSize="24sp" />


        <ImageView
            android:id="@+id/ohayo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/DescriptionTint"
            android:padding="5dp"
            android:src="@drawable/ohayo" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:padding="5dp"
            app:cardCornerRadius="14dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/secondaryColor"
                android:gravity="center"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/secondaryColor"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/ccp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        app:ccpDialog_fastScroller_bubbleColor="@color/secondaryColor"
                        app:ccpDialog_fastScroller_handleColor="@color/textColor"
                        app:ccp_autoFormatNumber="true"
                        app:ccp_contentColor="@color/textColor"
                        app:ccp_defaultNameCode="RU" />


                    <EditText
                        android:id="@+id/etNumberPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="phone"
                        android:gravity="center"
                        android:hint="@string/hint_numberUser"
                        android:inputType="phone"
                        android:maxLength="13"
                        android:textColor="@color/textColor"

                        />

                </LinearLayout>

                <LinearLayout
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layoutMode="clipBounds"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp">

                    <Button
                        android:id="@+id/butEntry"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="137dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="14dp"
                        android:layout_marginEnd="14dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/buttons"
                        android:padding="5dp"
                        android:text="@string/Entry"
                        android:textColor="@color/textColor" />

                    <Button
                        android:id="@+id/butRegistration"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="14dp"
                        android:layout_marginEnd="14dp"
                        android:layout_weight="1"
                        android:background="@drawable/buttons"
                        android:padding="5dp"
                        android:text="@string/registration"
                        android:textColor="@color/textColor" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ProgressBar>

</androidx.constraintlayout.widget.ConstraintLayout>