<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/secondaryColor"
    tools:context=".pro.presentation.chatProfileActivity.SettingsFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/DescriptionTint"
        android:elevation="5dp"
        android:src="@drawable/ohegao_edit"
        app:layout_constraintBottom_toTopOf="@+id/LLProfile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/LLProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.442"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="48dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/edit_profile_text"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etTelephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="14dp"
            android:autofillHints="phone"
            android:background="@null"
            android:cursorVisible="false"
            android:focusable="false"
            android:inputType="phone"
            android:longClickable="false"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="14dp"
            android:autofillHints="username"
            android:background="@null"
            android:cursorVisible="false"
            android:focusable="false"
            android:inputType="textCapWords"
            android:longClickable="false"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="14dp"
            android:autofillHints="username"
            android:background="@null"
            android:inputType="textCapWords"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="14dp"
            android:background="@null"
            android:inputType="textCapWords"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="14dp"
            android:background="@null"
            android:inputType="textCapWords"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etVk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="14dp"
            android:background="@null"
            android:inputType="textCapWords"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etInsta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="14dp"
            android:background="@null"
            android:inputType="textCapWords"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etStatus"
            android:layout_width="match_parent"
            android:layout_height="173dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="14dp"
            android:background="@null"
            android:inputType="textMultiLine"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/butSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:background="@drawable/buttons"
            android:text="@string/Save" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>