<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/firstColor"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".pro.presentation.old.ProfileActivity.ProfileActivity">


    <ImageView
        android:id="@+id/ohegaoProf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/DescriptionTint"
        android:src="@drawable/ohegao_profile"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </ImageView>

    <LinearLayout
        android:id="@+id/LLInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ohegaoProf"
        app:layout_constraintVertical_bias="0.172"
        tools:layout_editor_absoluteX="0dp">


        <androidx.cardview.widget.CardView
            android:layout_width="155dp"
            android:layout_height="155dp"
            app:cardBackgroundColor="@color/secondaryColor"
            app:cardCornerRadius="250dp">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/bgColor"
                app:cardCornerRadius="250dp">

                <ImageView
                    android:id="@+id/ivAva"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/ava"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile_test" />

            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="Nickname" />


        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="italic"
            tools:text="Username" />

        <TextView
            android:id="@+id/tvTelephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="italic"
            tools:text="+79996996969" />

        <TextView
            android:id="@+id/tvCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="14sp"
            tools:text="Moscow" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:textAlignment="center"
                android:textSize="14sp"
                tools:text="29.10.1994" />

            <TextView
                android:id="@+id/tvSigh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="14sp"
                tools:text="Скорпион" />

        </LinearLayout>


        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:text="@string/about_me"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvAboutMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:textSize="14sp"
            tools:text="Рассказ о себе" />




    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/dotSetting"
        android:layout_width="63dp"
        android:layout_height="59dp"
        android:layout_marginEnd="40dp"
        android:src="@drawable/dots"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LLInfo"
        app:layout_constraintVertical_bias="0.87">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentChatContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.fragment.app.FragmentContainerView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>